syntax = "proto3";

package cloud.disk_manager;

import "google/protobuf/empty.proto";
import "cloud/api/operation/operation.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/api;disk_manager";

service OperationService {
    rpc Get(GetOperationRequest) returns (operation.Operation);
    rpc Cancel(CancelOperationRequest) returns (operation.Operation);
}

message GetOperationRequest {
    string operation_id = 1;
}

message CancelOperationRequest {
    string operation_id = 1;
}
