syntax = "proto3";

package disks;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/disks/protos";

////////////////////////////////////////////////////////////////////////////////

message DeleteDiskRequest {
    reserved 2;

    types.Disk Disk = 1;
    bool Sync = 3;
}

message DeleteDiskTaskState {}
