syntax = "proto3";

package images;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/images/protos";

////////////////////////////////////////////////////////////////////////////////

message DeleteImageRequest {
    string ImageId = 1;
    string OperationCloudId = 2;
    string OperationFolderId = 3;
}

message DeleteImageTaskState {
    reserved 1;
}
